# calcular_potencia_rede_fttx

./: README.md  coordinate_correction.py  data_extraction.py  exemplo-rede-fttx.kml  file_handling.py  functions_tools.py  main.py  mapeamento.kml  postes.kml  pyproject.toml  route_generator.py  tratar_mapeamento.py  utilities.py
tests/: data-visualizaton.py  exemplo-rede-fttx.kml  pontos_e_linhas.kml  test_coordinate_correction.py  test_data_extraction.py  test_route_generator.py  test_utilities.py
