[tool.poetry]
name = "otdr"
version = "0.1.0"
description = "programa para calcular sinal de um progento FTTx"
authors = ["Joao Carlos <joao.carlos.dev.log@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
blue = "^0.9.1"
pykml = "^0.2.0"
rich = "^13.3.4"
mkdocstrings = "^0.21.2"
mkdocs = "^1.4.2"
pytest = "^7.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
